Created the basic detail view once you tap on a skill. Right now it only shows the skill name.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SkillDetailActivity"
+            android:label="@string/detail_page_name">
+        </activity>
     </application>
 
 </manifest>
