--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 04 07:56:56 PDT 2016
-sdk.dir=C\:\\Program Files\\Android\\sdk
+#Thu Jun 09 13:31:45 PDT 2016
+sdk.dir=C\:\\Users\\Alec Yeasting\\AppData\\Local\\Android\\sdk
